Update lan file

--- a/Documentation/offline documentation/index.html
+++ b/Documentation/offline documentation/index.html
@@ -84,7 +84,7 @@
 			
 			<li><a href="#professionals-Fields">Professionals Fields </a></li>	
 			<li><a href="#company-Fields">Company Fields </a></li>	
-			<li><a href="#User-Setting ">User Setting </a></li>	
+			<li><a href="#user-setting ">User Setting </a></li>	
 			<li><a href="#page">Pages</a></li>
 			<li><a href="#email">Email Template</a></li>
 			<li><a href="#MailChimp">MailChimp</a></li>
@@ -336,14 +336,26 @@
 	<img alt="" src="assets/images/company-Fields.png" style="width: 800px;"></p>
 	</p>
 </section>	
-<section id="page">
+
+<section id="user-setting">
 	<div class="page-header"><h3>User Setting</h3><hr class="notop"></div>
+	
 	<p>
-	The theme will creates pages when it will active. 
-	</p>	
+	<img alt="" src="assets/images/user-setting.png" style="width: 800px;"></p>
+	</p>
+	
+	
+	
+</section>	
+<section id="page">
+	<div class="page-header"><h3>Page Setting</h3><hr class="notop"></div>
+	
 	<p>
 	<img alt="" src="assets/images/page.png" style="width: 800px;"></p>
 	</p>
+	
+	
+	
 </section>	
 	
 	
@@ -353,19 +365,16 @@
 		This is email template page. You can edit the template.<br/>
 		List of email Template<br/>
 		1. Signup email<br/>
-		2. Forgot password email<br/>
-		3. Payment invoice email<br/>
-		4. Listing Contact emai client + admin<br/>
-		5. Contact us Admin email<br/>
-		6. Contact us user Auto replu email <br/>
+		2. Forgot password email<br/>		
+		3. Profile Contact email client + admin<br/>
+		4. Contact us Admin email<br/>
+		5. Contact us user Auto replu email <br/>
 		
 	</p>	
 	<p>
 	<img alt="" src="assets/images/email.png" style="width: 800px;"></p>
 	</p>
-	<p>
-	<img alt="" src="assets/images/order-client.png" style="width: 800px;"></p>
-	</p>
+	
 	
 </section>	
 
@@ -387,8 +396,9 @@
 		<b>You can use this plugin to import user </b><br/><br/>
 
 		<a href="https://wordpress.org/plugins/import-users-from-csv-with-meta/">import-users-from-csv-with-meta </a><br/><br/><br/>
-		
+		<!--
 		Sample CSV file <a href="assets/Sample-Membership.csv" download> Sample-Membership.csv</a><br/>
+		-->
 	</p>	
 	
 </section>
