--- a/Documentation/offline documentation/index.html
+++ b/Documentation/offline documentation/index.html
@@ -74,6 +74,7 @@
 				
 			<li><a href="#installation" title="INSTALLATION">Inslatallation</a></li>	
 			<li><a href="#installation-after" title="INSTALLATION">Plugin Inslatallation</a></li>	
+			<li><a href="#membership-user">Demo User Import </a></li>	
 			<li><a href="#all-shortcode" title="INSTALLATION">All Shortcode</a></li>
 			<li><a href="#languages ">Change Languages </a></li>
 			<li><a href="#front_page_image_info" title="Front Page Image Info">Home Page</a></li>	
@@ -88,7 +89,7 @@
 			<li><a href="#page">Pages</a></li>
 			<li><a href="#email">Email Template</a></li>
 			<li><a href="#MailChimp">MailChimp</a></li>
-			<li><a href="#membership-user">Membership User Import </a></li>	
+			
 			
 			
 			
@@ -185,6 +186,27 @@
 		
 		
 </section>	
+<section id="membership-user">
+	<div class="page-header"><h3> Demo User Import</h3><hr class="notop"></div>
+	<p>
+	<b>For importing demo data</b>
+	<br/><br/>
+	1. Install the plugin <a href="https://wordpress.org/plugins/import-users-from-csv-with-meta/">
+			import-users-from-csv-with-meta </a>
+	<br/><br/>
+	
+	2. Import user data by the plugin	
+	<br/><br/>
+	<img alt="" src="assets/images/user-upload.png" style=" width: 765px;"> 
+	<br/><br/>
+	3. Sample Company CSV file <a href="assets/corporate-sample.csv" download> corporate-sample.csv</a>
+	<br/><br/>	
+	4. Sample professionals CSV file  <a href="assets/professional-sample.csv" download> professional-sample.csv</a>
+		
+	</p>	
+	
+</section>
+
 
 <section id="all-shortcode">
 		<div class="page-header"><h3>All Shortcode</h3><hr class="notop"></div>
@@ -389,19 +411,6 @@
 </section>		
 
 
-<section id="membership-user">
-	<div class="page-header"><h3> User Import</h3><hr class="notop"></div>
-	<p>
-		
-		<b>You can use this plugin to import user </b><br/><br/>
-
-		<a href="https://wordpress.org/plugins/import-users-from-csv-with-meta/">import-users-from-csv-with-meta </a><br/><br/><br/>
-		<!--
-		Sample CSV file <a href="assets/Sample-Membership.csv" download> Sample-Membership.csv</a><br/>
-		-->
-	</p>	
-	
-</section>
 
 
 
