--- a/Documentation/offline documentation/index.html
+++ b/Documentation/offline documentation/index.html
@@ -73,7 +73,9 @@
 			<li><a class="current" href="#documenter_cover">Start</a></li>
 				
 			<li><a href="#installation" title="INSTALLATION">Inslatallation</a></li>	
-			<li><a href="#installation-after" title="INSTALLATION">Plugin Inslatallation</a></li>	
+			<li><a href="#installation-after" title="INSTALLATION">Plugin Inslatallation</a></li>
+			
+			<li><a href="#my-account" title="my account">Update User Info</a></li>
 			<li><a href="#membership-user">Demo User Import </a></li>	
 			<li><a href="#all-shortcode" title="INSTALLATION">All Shortcode</a></li>
 			<li><a href="#languages ">Change Languages </a></li>
@@ -85,7 +87,7 @@
 			
 			<li><a href="#professionals-Fields">Professionals Fields </a></li>	
 			<li><a href="#company-Fields">Company Fields </a></li>	
-			<li><a href="#user-setting ">User Setting </a></li>	
+			<li><a href="#user-setting">User Setting </a></li>	
 			<li><a href="#page">Pages</a></li>
 			<li><a href="#email">Email Template</a></li>
 			<li><a href="#MailChimp">MailChimp</a></li>
@@ -185,6 +187,12 @@
 	<p>
 		
 		
+</section>	
+<section id="my-account">
+	<div class="page-header"><h3>My Account User info</h3><hr class="notop"></div>
+		<img alt="" src="assets/images/My-Account – Tiger.png" style=" width: 965px;"></p>
+	<p>
+
 </section>	
 <section id="membership-user">
 	<div class="page-header"><h3> Demo User Import</h3><hr class="notop"></div>
@@ -364,6 +372,9 @@
 	
 	<p>
 	<img alt="" src="assets/images/user-setting.png" style="width: 800px;"></p>
+	</p>
+	<p>
+	<img alt="" src="assets/images/user-setting2.png" style="width: 800px;"></p>
 	</p>
 	
 	
