--- a/Documentation/online documentation/online-documentation.html
+++ b/Documentation/online documentation/online-documentation.html
@@ -1,1 +1,1 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN"> <html> <head> <title>Redirect</title> <meta http-equiv="REFRESH" content="0;url=http://medical.uouapps.com/doc/"></HEAD> <BODY></BODY> </HTML>
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN"> <html> <head> <title>Redirect</title> <meta http-equiv="REFRESH" content="0;url=http://tiger.uou.ch/doc/"></HEAD> <BODY></BODY> </HTML>
